--- a/client/index.html
+++ b/client/index.html
@@ -8,22 +8,20 @@
     <script src="assets/app.js"></script>
     <!-- ***** FACTORIES ***** -->
     <script src="factories/cstmrFctry.js"></script>
+    <script src="factories/usrFctry.js"></script>
     <script src="factories/prdctFctry.js"></script>
-    <script src="factories/ordrFctry.js"></script>
+    <script src="factories/bcktFctry.js"></script>
     <!-- ***** CONTROLLERS ***** -->
     <script src="controllers/idxCtrl.js"></script>
-    <script src="controllers/cstmrCtrl.js"></script>
-    <script src="controllers/prdctCtrl.js"></script>
-    <script src="controllers/ordrCtrl.js"></script>
+    <script src="controllers/usrCtrl.js"></script>
+    <script src="controllers/bcktCtrl.js"></script>
     <script src="controllers/dshbrdCtrl.js"></script>
 
     <title>MEAN_Store</title>
   </head>
   <body ng-app='app'>
     <a href="#!/dashboard">Dashboard</a> |
-    <a href="#!/products">Products</a> |
-    <a href="#!/customers">Customers</a> |
-    <a href="#!/orders">Orders</a> |
+    <a href="#!/buckets">Buckets</a> |
     <div ng-view></div>
   </body>
 </html>
